--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ img {
   object-fit: cover;
 }
 
-/* ############################ MEEDIA QUERIES (MEDIUM DEVICES) ############################ */
+/* ############################ MEDIA QUERIES (MEDIUM DEVICES) ############################ */
 @media screen and (max-width: 1024px) {
   .container {
     width: var(--container-width-md);
@@ -126,7 +126,7 @@ img {
   }
 }
 
-/* ############################ MEEDIA QUERIES (SMALL DEVICES) ############################ */
+/* ############################ MEDIA QUERIES (SMALL DEVICES) ############################ */
 @media screen and (max-width: 600px) {
   .container {
     width: var(--container-width-sm);
