--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -39,10 +39,11 @@ header {
 /* ######### ME (Profile Image) ##########*/
 .me {
   background: linear-gradient(var(--color-primary), transparent);
-  width: 22rem;
+  width: 23rem;
   height: 30rem;
   position: absolute;
-  left: calc(50% - 11rem);
+  left: 50%;
+  transform: translateX(-50%);
   margin-top: 4rem;
   border-radius: 12rem 12rem 0 0;
   padding: 1rem 1.5rem 1.5rem 1.5rem;
@@ -59,4 +60,24 @@ header {
   font-weight: 300;
   font-size: 0.9rem;
   transform: rotate(90deg);
+}
+
+/* ############################ MEDIA QUERIES (MEDIUM DEVICES) ############################ */
+@media screen and (max-width: 1024px) {
+  header {
+    height: 110vh;
+  }
+  .me {
+    width: 20rem;
+  }
+}
+@media screen and (max-width: 768px) {
+}
+
+/* ############################ MEDIA QUERIES (SMALL DEVICES) ############################ */
+@media screen and (max-width: 600px) {
+  .header__socials,
+  .scroll__down {
+    display: none;
+  }
 }
